--- a/.github/workflows/build-windows-installer.yml
+++ b/.github/workflows/build-windows-installer.yml
@@ -49,8 +49,8 @@ jobs:
     - name: Upload Installer to artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: bpx-installers-windows-exe-intel
-        path: ${{ github.workspace }}/bpx-execution-client-*.exe
+        name: corpochain-installers-windows-exe-intel
+        path: ${{ github.workspace }}/corpochain-execution-client-*.exe
 
     - name: Upload release artifacts
       if: github.event_name == 'release'
@@ -59,5 +59,5 @@ jobs:
       run: |
         gh release upload \
           ${GITHUB_REF#refs/*/} \
-          bpx-execution-client-*.exe
+          corpochain-execution-client-*.exe
       shell: bash
